<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/shot_detail_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.v7.widget.CardView
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/shot_det_cv_margin_left_right"
        android:layout_marginRight="@dimen/shot_det_cv_margin_left_right"
        android:layout_marginTop="@dimen/shot_det_cv_margin_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/shot_det_cont_margin"
            android:layout_marginRight="@dimen/shot_det_cont_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_view_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:srcCompat="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:id="@+id/shot_detail_tv_likes_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/shot_det_likes_margin"
                android:text="@string/count" />

            <ImageView
                android:id="@+id/im_view_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_visibility_black_24dp" />

            <TextView
                android:id="@+id/shot_detail_tv_views_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/shot_det_likes_margin"
                android:text="@string/count" />

            <ImageView
                android:id="@+id/im_view_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_comment_black_24dp" />

            <TextView
                android:id="@+id/shot_detail_tv_comments_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/shot_det_cv_description_margin_left_right"
        android:layout_marginRight="@dimen/shot_det_cv_description_margin_left_right"
        android:layout_marginTop="@dimen/shot_det_cv_description_margin_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shot_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/title"
                android:textSize="@dimen/shot_det_title_size"
                android:textStyle="bold"

                />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:id="@+id/shot_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/shot_det_cv_description_margin"
                    android:text="@string/lore_ispum"
                    android:textSize="@dimen/shot_det_cv_description_size" />
            </ScrollView>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>